# SideAssist.Dashboard.Flutter

./: .gitignore  CMakeLists.txt  TODO.md  pubspec.yaml
lib/: config.dart  main.dart  manual_value_notifer.dart  pages.dart  temp.dart
lib/screens/: category.dart  client.dart  home.dart  settings.dart
lib/screens/forms/: auto_suggest_box.dart  combobox.dart  date_picker.dart  number_box.dart  text_box.dart  time_picker.dart
lib/screens/inputs/: button.dart  checkbox.dart  slider.dart  toggle_switch.dart
lib/screens/navigation/: navigation_view.dart  tab_view.dart  tree_view.dart
lib/screens/popups/: content_dialog.dart  flyout.dart  tooltip.dart
lib/screens/surface/: acrylic.dart  commandbars.dart  expander.dart  info_bars.dart  progress_indicators.dart  tiles.dart
lib/screens/theming/: reveal_focus.dart
lib/side_assist/: side_assist.dart
lib/side_assist/src/: client.dart  dashboard.dart  named_value.dart
lib/side_assist/src/value_meta_type/: option.dart  path.dart  value_validator.dart
lib/widgets/: client_info.dart  clients.dart  edit.dart  option.dart  option_list.dart  page.dart  typer_animated_text.dart
lib/widgets/client/: info.dart  option.dart  option_list.dart  param.dart  parameter_list.dart
windows/runner/: Runner.rc
